Fix misalignment of project-item GitHub link

--- a/src/projects/project-item.scss
+++ b/src/projects/project-item.scss
@@ -34,6 +34,7 @@
     transition: border-radius 0.4s ease-in-out;
     
     .app-link {
+      max-width: 395px;
       margin-left: 10px;
       font-size: 1.2em;
       color: var(--project-item-link-color);
